release(Startvorgang)
feat():
fix(): Startfenster Lizenz und Datenbank verbessert
refactor(ui):